src/test/resources/inspections/module_unavailable.lua
<error descr="Unknown function 'module'."><warning descr="Undeclared variable 'module'.">module</warning>("Whatever")</error>
